--- a/Curso Udemy/Box Model/box_model.html
+++ b/Curso Udemy/Box Model/box_model.html
@@ -15,18 +15,17 @@
         height: 150px;
         /*border: 5px solid black;*/
         border-style: solid;
-        border-width: 10px;
+        border-width: 50px 25px 50px 25px;
         border-bottom-color: firebrick;
         border-top-color: yellow;
         border-right-color: green;
         border-left-color: blue;
-        padding: 15px 0 0 10px;
         background-image: url(adidas.png);
         background-size: cover;
         background-position: center;
         color:white;
-        padding: 10px;
-        margin: 20px;
+        padding: 20px;
+        margin: 10px;
     }
 
     .section-two {
