--- a/Curso Udemy/Listas e Menus/listas_menus.html
+++ b/Curso Udemy/Listas e Menus/listas_menus.html
@@ -16,6 +16,7 @@
             height: 50px;
             background: rgba(0, 0, 0, 0.5);
             display: flex;
+            justify-content: center;
             /* justify-content: center;  deixa os itens(menu) no meio*/
             align-items: center; /*Vai alinhar de acordo com a altura*/
         }
@@ -33,6 +34,7 @@
             /*flex-direction:row -> é o padrão que os itens ficam em linha(row)*/
             list-style-type: none;
             margin-left: 10px;
+            
         }
     </style>
 </head>
